frame/support/test/tests/construct_runtime_ui/double_module_parts.stderr
error: `Config` was already declared before. Please remove the duplicate declaration
  --> $DIR/double_module_parts.rs:10:37
   |
10 |         Balance: balances::{Config, Call, Config<T>, Origin<T>},
   |                                           ^^^^^^
